--- a/mini SOC/logstash/logstash.conf
+++ b/mini SOC/logstash/logstash.conf
@@ -5,17 +5,34 @@ input {
 }
 
 filter {
+  # Debug: Stampa tutti i campi disponibili per capire la struttura
+  # ruby {
+  #   code => "if event.get('[fields]') && event.get('[fields][log_type]') == 'suricata'; puts '=== SURICATA DETECTED ==='; puts event.to_hash.keys.inspect; end"
+  # }
+  
   # Determine log source based on fields
-  if [source] =~ /suricata/ or [fields][log_type] == "suricata" {
+  # Filebeat invia log_type nel campo fields.log_type (con fields_under_root: false)
+  # Aggiungi tag per identificare Suricata PRIMA di tutto
+  if [fields][log_type] == "suricata" {
+    mutate {
+      add_tag => [ "suricata_log" ]
+      add_field => { "log_source" => "suricata" }
+    }
+  }
+  
+  # Process Suricata logs
+  if "suricata_log" in [tags] {
     # Suricata EVE JSON logs
+    # Il message contiene già il JSON parsato da Filebeat con ndjson parser
+    # Ma dobbiamo parsarlo di nuovo perché Filebeat lo invia come stringa
     json {
       source => "message"
       skip_on_invalid_json => true
     }
     
-    # Add log source tag
+    # Assicura che log_source sia impostato (di nuovo per sicurezza)
     mutate {
-      add_field => { "log_source" => "suricata" }
+      replace => { "log_source" => "suricata" }
     }
     
     # Process Suricata events
@@ -44,8 +61,9 @@ filter {
         }
       }
     }
-  } else {
+  } else if [fields][log_type] != "suricata" {
     # ModSecurity logs (existing processing)
+    # Solo se NON è Suricata
     json {
       source => "message"
       skip_on_invalid_json => true
@@ -173,7 +191,8 @@ filter {
 
 output {
   # Route to different indices based on log source
-  if [log_source] == "suricata" {
+  # Usa il tag per essere sicuri
+  if "suricata_log" in [tags] or [log_source] == "suricata" {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "suricata-logs-%{+YYYY.MM.dd}"
@@ -189,6 +208,16 @@ output {
       hosts => ["http://elasticsearch:9200"]
       index => "soc-logs-%{+YYYY.MM.dd}"
     }
+  }
+
+  # Output a Splunk via TCP (per tutti i log)
+  # Splunk riceve i log sulla porta 9997
+  tcp {
+    host => "splunk"
+    port => 9997
+    codec => json_lines
+    # Riconnessione automatica se Splunk non è disponibile
+    reconnect_interval => 5
   }
 
   # Also print to stdout for easy debugging
